@@ -1,4 +1,4 @@
-$Id: History,v 1.36 2001-11-10 07:51:24 kurasige Exp $
+$Id: History,v 1.37 2001-11-13 05:13:36 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,8 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
-Nov.10, 01 
+Nov.10, 01 (track-V03-02-06)
 - Fixed bugs in assignment operators in G4Track
+- Added SetParentWeightByProcess
+- Added SetSecondaryWeightByProcess
 
 Nov. 08, 01  G.Cosmo (track-V03-02-05)
 - Merge changes included in "track-V03-02-02a".
